penambahan kontak kami

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Denah Pengabdi Kangsa Pertiwi</title>
+
+    <link rel="shortcut icon" type="x-icon" href="./assets/logo_dedikasi_tunggal.png">
     
     <!-- CSS LINK -->
     <link rel="stylesheet" href="css/beranda.css">
@@ -32,14 +34,14 @@
         <div class="overlay"></div>
         <nav>
             <!-- MINI NAV -->
-            <div class="mini-nav">
+            <!-- <div class="mini-nav"> -->
                 <!-- warning -->
-                <span class="warning">
+                <!-- <span class="warning">
                     <i class='bx bxs-alarm-exclamation'></i>
                     Pendaftaran telah ditutup !
-                </span>
+                </span> -->
                 <!-- mini-nav-menu -->
-                <ul class="mini-nav-menu">
+                <!-- <ul class="mini-nav-menu">
                     <li><a href="#">blog</a></li>
                     <li><a href="#">alamat</a></li>
                     <li><a href="#">kontak kami</a></li>
@@ -47,12 +49,12 @@
                     <li><a href="#">id/en</a></li>
                     <li><a href="#">pencarian</a></li>
                 </ul>
-            </div>
+            </div> -->
 
             <!-- MAIN NAV -->
             <div class="main-nav">
                 <!-- logo -->
-                <a href="#" class="logo"><img src="assets/logo_dedikasi.png" alt="logo_dedikasi"></a>
+                <a href="#" class="logo"><img src="assets/logo_dedikasi_putih.png" alt="logo_dedikasi"></a>
                 <!-- main-nav-menu -->
                 <div class="main-nav-menu">
                     <!-- main-nav-buttons -->
@@ -61,7 +63,7 @@
                         <li><a href="#">TENTANG KAMI</a></li>
                         <li><a href="#">PILIHAN PROGRAM</a></li>
                         <li><a href="#">DOKUMENTASI</a></li>
-                        <li><a href="#">MITRA</a></li>
+                        <li><a href="#">TEAM KAMI</a></li>
                     </ul>
                     <!-- sign-button -->
                     <div class="right-content">
@@ -117,7 +119,7 @@
                     <br>
                     <p class="about-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, a dolores, voluptates facere atque cumque odit sint repellendus quos quis, enim dolore itaque facilis? Expedita impedit reprehenderit maiores labore corporis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora cupiditate officia obcaecati, exercitationem autem iste quos facere totam consequatur saepe unde! Nesciunt vel ipsam quas. Rerum explicabo eligendi aliquid temporibus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias eius tempore, provident quod ratione unde culpa at, accusantium corrupti.</p>
                     <div class="about-line"></div>
-                    <a href="#" class="footer-text"><i class="fa-brands fa-youtube"></i> Cek youtube kami untuk melihat dokumentasi kegiatan lebih lengkap.</a>
+                    <a href="#" class="footer-text"><i class="fa-brands fa-youtube"></i> Cek youtube kami untuk mengetahui profil lebih lengkap.</a>
                 </div>
                 <img class="about-img" src="assets/IMG_2412.jpg" alt="about-img">
             </div>
@@ -132,6 +134,125 @@
                     <p class="makna-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi dolorum omnis, perferendis est quisquam temporibus veritatis laborum rerum laudantium excepturi pariatur, dicta distinctio optio, ut dolor explicabo consequuntur eligendi hic! Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus minima maxime vel non modi officia unde consequuntur ex ab neque praesentium, perspiciatis veritatis, quasi debitis. Dolore impedit nemo dolorem omnis!</p>
                 </div>
             </div>
+        </section>
+
+        <section class="visimisi-section">
+            <img class="visimisi-logo" src="assets/logo_dedikasi.png" alt="logo-dedikasi">
+            <div class="visimisi-middle">
+                <div class="visi">
+                    <h1>VISI</h1>
+                    <p>Menciptakan wadah untuk mendorong pemuda-pemudi Indonesia menjadi garda terdepan perubahan guna memberikan kebermanfaatan bagi masyarakat melalui progam pengabdian.</p>
+                </div>
+                <div class="misi">
+                    <h1>MISI</h1>
+                        <ul>
+                            <li>
+                                Melaksanakan program kerja melalui berbagai bidang kegiatan yang relevan dengan permasalahan sekitar.
+                            </li>
+                            <li>
+                                Menjalin hubungan dengan stakeholder terkait untuk menghadirkan kegiatan yang harmonis.
+                            </li>
+                            <li>
+                                Memberdayakan masyarakat sekitar dalam setiap program kegiatan.
+                            </li>
+                            <li>
+                                Memberdayakan potensi pemuda-pemudi melalui inovasi dan berkomitmen untuk memberikan hak pendidikan guna menciptakan generasi yang berpengetahuan luas, kreatif, dan berkomitmen untuk memajukan kualitas masyarakatnya.
+                            </li>
+                        </ul>
+                </div>
+            </div>
+        </section>
+
+        <section class="card-section">
+            <div class="card-top">
+                <img class="card-logo" src="assets/logo_dedikasi.png" alt="logo-dedikasi">
+                <h1 class="card-title">PILIHAN PROGRAM</h1>
+            </div>
+            <div class="card-container">
+                <a href="#">
+                    <div class="card">
+                        <img src="./assets/self-funded.jpg" alt="self-funded">
+                        <div class="card-content">
+                            <h3>SELF FUNDED</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga dolore magnam at ut sapiente impedit, ipsam consectetur culpa asperiores, fugit eaque inventore quibusdam odit explicabo quia delectus ea perferendis nihil?.</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="card">
+                        <img src="./assets/funded.jpg" alt="self-funded">
+                        <div class="card-content">
+                            <h3>FULLY FUNDED</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga dolore magnam at ut sapiente impedit, ipsam consectetur culpa asperiores, fugit eaque inventore quibusdam odit explicabo quia delectus ea perferendis nihil?.</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="card">
+                        <img src="./assets/partial-funded.jpg" alt="self-funded">
+                        <div class="card-content">
+                            <h3>PARTIAL FUNDED</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga dolore magnam at ut sapiente impedit, ipsam consectetur culpa asperiores, fugit eaque inventore quibusdam odit explicabo quia delectus ea perferendis nihil?.</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </section>
+
+        <section class="contact">
+            <div class="content">
+                <h2>Contact Us</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut repellat commodi, inventore non et dolores nam eum eaque autem, quam excepturi blanditiis quas unde odit mollitia exercitationem.</p>
+            </div>
+            <div class="contact-container">
+                <div class="contact-info">
+                    <div class="box">
+                        <div class="icon"><i class="fa-solid fa-location-dot"></i></div>
+                        <div class="text">
+                            <h3>Address</h3>
+                            <p>Jl.Kalimantan Gg.IV/86, <br> Kecamatan Sumbersari, <br>Kabupaten Jember <br> Kode Pos : 68121</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="icon"><i class="fa-solid fa-phone"></i></div>
+                        <div class="text">
+                            <h3>Phone</h3>
+                            <p>0813-3349-0855</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="icon"><i class="fa-solid fa-envelope"></i></div>
+                        <div class="text">
+                            <h3>Email</h3>
+                            <p>dedikasiofficial@gmail.com</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="contact-form">
+                    <form>
+                        <h2>Send Message</h2>
+                        <div class="input-box">
+                            <input type="text" name="" required="required">
+                            <span>Full Name</span>
+                        </div>
+                        <div class="input-box">
+                            <input type="text" name="" required="required">
+                            <span>Email</span>
+                        </div>
+                        <div class="input-box">
+                            <textarea required="required"></textarea>
+                            <span>Type Your Message...</span>
+                        </div>
+                        <div class="input-box">
+                            <input type="submit" name="" value="Send">
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <!-- <div class="gmaps">
+                <h1>Embed Location Map</h1>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3949.4240851860027!2d113.71170907529556!3d-8.159956781755437!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd6944ac0387b79%3A0x40d4da130c33887e!2sJl.%20Kalimantan%20No.4%2C%20Krajan%20Timur%2C%20Sumbersari%2C%20Kec.%20Sumbersari%2C%20Kabupaten%20Jember%2C%20Jawa%20Timur%2068121!5e0!3m2!1sid!2sid!4v1714460184090!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div> -->
         </section>
 
     </main>
